--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="fat">Fat</string>
     <string name="calories">Calories</string>
     <string name="calculate">Calculate</string>
+    <string name="test">test</string>
 </resources>
