--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="calories">Calories</string>
     <string name="calculate">Calculate</string>
     <string name="test">test</string>
+    <string name="test2">test2</string>
 </resources>
