Membuat activity_camera.xml Menambahkan dependecy di build.gradle.kts Membuat CameraActivity.kt Menambahkan warna di colors.xml Membuat fragment_result.xml Menambahkan vector ic_camera_24.xml dan ic_cameraswitch_24.xml Membuat ResultFragment.kt Membuat ResultViewModel.kt Membuat rounded_button_background.xml Menambahkan string di strings.xml Membuat Utils.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="fat">Fat</string>
     <string name="calories">Calories</string>
     <string name="calculate">Calculate</string>
+    <string name="ask_with_chatbot">Ask with chatbot about your results!</string>
+    <string name="result">Result</string>
+    <string name="results_from_chatbot">Results from Chatbot</string>
+    <string name="based_on_the_information_you_entered">Based on the information you entered...</string>
     <string name="test">test</string>
     <string name="test2">test2</string>
 </resources>
