1. Penambahan item_food.xml supaya nanti food list di home rapih 2. Mengubah Hello blank fragment pada fragment_home.xml menjadi title Dishes dan Package Foods 3. Penambahan beberapa kode di fragment_home.xml untuk merapihkan layout home 4.Penambahan food_tracker, foods_eaten di strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="based_on_the_information_you_entered">Based on the information you entered...</string>
     <string name="test">test</string>
     <string name="test2">test2</string>
+    <string name="food_tracker">Food Tracker</string>
+    <string name="foods_eaten">5 Foods Eaten</string>
 </resources>
