--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,11 @@
     <string name="media_chooser">Media Chooser</string>
     <string name="analyze_food">Analyze Food</string>
     <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
+    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
+    <string name="no_tflite_interpreter_loaded">No TFLite interpreter loaded</string>
+    <string name="food_details">Food Details</string>
+    <string name="carbohydrate_in_result">Carbohydrate:</string>
+    <string name="protein_in_result">Protein:</string>
+    <string name="fat_in_result">Fat:</string>
+    <string name="calories_in_result">Calories:</string>
 </resources>
