--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="protein_in_result">Protein:</string>
     <string name="fat_in_result">Fat:</string>
     <string name="calories_in_result">Calories:</string>
+    <string name="based_on_your_food_details_you_have">Based on your food details, you have</string>
 </resources>
