--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="capture_from_camera">Capture from camera</string>
     <string name="media_chooser">Media Chooser</string>
     <string name="analyze_food">Analyze Food</string>
+    <string name="notifications">Notifications</string>
+    <string name="enable_notifications">Enable Notifications</string>
 </resources>
