--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="image_classification_failed">Image Classification Failed</string>
     <string name="notifications">Notifications</string>
     <string name="enable_notifications">Enable Notifications</string>
+    <string name="total_nutrition">Total Nutrition:</string>
+    <string name="evaluation">Evaluation:</string>
 </resources>
