--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="enable_notifications">Enable Notifications</string>
     <string name="total_nutrition">Total Nutrition:</string>
     <string name="evaluation">Evaluation:</string>
+    <string name="delete">Delete</string>
 </resources>
